--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -12,7 +12,6 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="250dp"
-
         android:layout_margin="@dimen/_8dp"
         app:cardCornerRadius="@dimen/_16dp">
 
@@ -77,7 +76,7 @@
                 android:id="@+id/tvFavCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{food.aggregateLikes}"
+                setNumberOfLikes="@{food.aggregateLikes}"
                 app:layout_constraintStart_toStartOf="@id/tvDescription"
                 app:layout_constraintTop_toBottomOf="@id/iconFav"
                 tools:text="100" />
@@ -97,7 +96,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:text="@{food.readyInMinutes}"
+                setNumberOfMinutes="@{food.readyInMinutes}"
                 android:textAlignment="center"
                 app:layout_constraintStart_toEndOf="@id/tvFavCount"
                 app:layout_constraintTop_toBottomOf="@id/iconTime"
@@ -109,6 +108,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_leaf_24"
                 app:layout_constraintEnd_toEndOf="@id/tvLeaf"
+                veganColor="@{food.vegan}"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@id/tvLeaf"
                 app:layout_constraintTop_toTopOf="@id/iconTime" />
@@ -119,6 +119,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:textAlignment="center"
+                veganColor="@{food.vegan}"
                 app:layout_constraintStart_toEndOf="@id/tvTime"
                 app:layout_constraintTop_toBottomOf="@id/iconLeaf"
                 android:text="@string/vegan" />
