--- a/app/src/main/res/layout/fragment_food_recipes.xml
+++ b/app/src/main/res/layout/fragment_food_recipes.xml
@@ -6,15 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.recipes.FoodRecipesFragment">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_margin="@dimen/_8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:background="@drawable/bg_search_view"
+        app:queryHint="Search Food Recipe"
+        app:iconifiedByDefault="false"
+        android:layout_height="wrap_content"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/_8dp"
         android:layout_marginHorizontal="@dimen/_8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/searchView"/>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/filterFab"
@@ -28,7 +39,9 @@
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_marginTop="@dimen/_8dp"
+        app:layout_constraintTop_toBottomOf="@id/searchView"
+        android:layout_height="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -48,4 +61,9 @@
             <include layout="@layout/shimmer_layout" />
         </LinearLayout>
     </com.facebook.shimmer.ShimmerFrameLayout>
+
+    <include
+        android:id="@+id/no_internet_connection_layout"
+        layout="@layout/no_internet_connection"
+        android:visibility="invisible"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
