--- a/app/src/main/res/layout/fragment_food_recipes.xml
+++ b/app/src/main/res/layout/fragment_food_recipes.xml
@@ -8,23 +8,24 @@
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
-        android:layout_margin="@dimen/_8dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_8dp"
         android:background="@drawable/bg_search_view"
-        app:queryHint="Search Food Recipe"
         app:iconifiedByDefault="false"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="Search Food Recipe" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_8dp"
         android:layout_marginHorizontal="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchView"/>
+        app:layout_constraintTop_toBottomOf="@id/searchView" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -32,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_16dp"
+        android:contentDescription="@string/filter"
         android:src="@drawable/ic_filter_list_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -39,9 +41,9 @@
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmerLayout"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/_8dp"
-        app:layout_constraintTop_toBottomOf="@id/searchView"
-        android:layout_height="0dp">
+        app:layout_constraintTop_toBottomOf="@id/searchView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,8 +64,13 @@
         </LinearLayout>
     </com.facebook.shimmer.ShimmerFrameLayout>
 
-    <include
+    <com.example.foodyrecipes.ui.recipes.component.NoInternetConnection
         android:id="@+id/no_internet_connection_layout"
-        layout="@layout/no_internet_connection"
-        android:visibility="invisible"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
