--- a/app/src/main/res/layout/no_internet_connection.xml
+++ b/app/src/main/res/layout/no_internet_connection.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/imageView"
+        android:contentDescription="@string/wifi_connection_icon"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:alpha="0.5"
-        android:src="@drawable/ic_sad_24"
+        android:src="@drawable/wifi_1"
         />
 
     <TextView
