--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="_24sp">24sp</dimen>
     <dimen name="_36dp">36dp</dimen>
     <dimen name="_4dp">4dp</dimen>
+    <dimen name="_16sp">16sp</dimen>
 </resources>
