--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,38 @@
     <color name="chipBackgroundColor">@color/lightGray</color>
     <color name="checkedChipTextColor">@color/colorPrimary</color>
     <color name="chipTextColor">@color/darkGray</color>
+
+
+    <!-- LIGHT THEME COLOR -->
+    <color name="seed">#6750A4</color>
+    <color name="primary">#6750A4</color>
+    <color name="onPrimary">#FFFFFF</color>
+    <color name="primaryContainer">#E9DDFF</color>
+    <color name="onPrimaryContainer">#22005D</color>
+    <color name="secondary">#625B71</color>
+    <color name="onSecondary">#FFFFFF</color>
+    <color name="secondaryContainer">#E8DEF8</color>
+    <color name="onSecondaryContainer">#1E192B</color>
+    <color name="tertiary">#7E5700</color>
+    <color name="onTertiary">#FFFFFF</color>
+    <color name="tertiaryContainer">#FFDEAC</color>
+    <color name="onTertiaryContainer">#281900</color>
+    <color name="error">#BA1A1A</color>
+    <color name="errorContainer">#FFDAD6</color>
+    <color name="onError">#FFFFFF</color>
+    <color name="onErrorContainer">#410002</color>
+    <color name="background">#FFFBFF</color>
+    <color name="onBackground">#1C1B1E</color>
+    <color name="surface">#FFFBFF</color>
+    <color name="onSurface">#1C1B1E</color>
+    <color name="surfaceVariant">#E7E0EB</color>
+    <color name="onSurfaceVariant">#49454E</color>
+    <color name="outline">#7A757F</color>
+    <color name="inverseOnSurface">#F4EFF4</color>
+    <color name="inverseSurface">#313033</color>
+    <color name="inversePrimary">#CFBCFF</color>
+    <color name="shadow">#000000</color>
+    <color name="surfaceTint">#6750A4</color>
+    <color name="outlineVariant">#CAC4CF</color>
+    <color name="scrim">#000000</color>
 </resources>
