--- a/app/src/main/res/color/chip_background_color.xml
+++ b/app/src/main/res/color/chip_background_color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/checkedChipBackgroundColor" android:state_checked="true"/>
-    <item android:color="@color/chipBackgroundColor" android:state_checked="false"/>
+    <item android:color="@color/onPrimaryContainer" android:state_checked="true"/>
+    <item android:color="@color/primaryContainer" android:state_checked="false"/>
 </selector>
