--- a/app/src/main/res/drawable/bg_search_view.xml
+++ b/app/src/main/res/drawable/bg_search_view.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="@dimen/_16dp"/>
-    <solid android:color="@color/white"/>
-    <stroke android:color="@color/darker"
-        android:width=".5dp"/>
+    <corners android:radius="@dimen/_16dp" />
+    <solid android:color="@color/surface"/>
+
 </shape>
