--- a/app/src/main/res/drawable/ic_leaf_24.xml
+++ b/app/src/main/res/drawable/ic_leaf_24.xml
@@ -1,5 +1,10 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M12,3c-4.8,0 -9,3.86 -9,9c0,2.12 0.74,4.07 1.97,5.61L3,19.59L4.41,21l1.97,-1.97C7.93,20.26 9.88,21 12,21c2.3,0 4.61,-0.88 6.36,-2.64C20.12,16.61 21,14.3 21,12V3H12zM10.5,17L10,16.5l2.5,-3.5l-5,-0.5l6,-5.5L14,7.5L11.5,11l5,0.5L10.5,17z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:tint="@color/onSurface"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M12,3c-4.8,0 -9,3.86 -9,9c0,2.12 0.74,4.07 1.97,5.61L3,19.59L4.41,21l1.97,-1.97C7.93,20.26 9.88,21 12,21c2.3,0 4.61,-0.88 6.36,-2.64C20.12,16.61 21,14.3 21,12V3H12zM10.5,17L10,16.5l2.5,-3.5l-5,-0.5l6,-5.5L14,7.5L11.5,11l5,0.5L10.5,17z" />
 </vector>
