--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -78,10 +78,9 @@
 
                         <TextView
                             android:id="@+id/tvTitle"
-                            style="@style/TextAppearance.Material3.TitleLarge"
+                            style="@style/Widget.FoodyRecipe.TitleStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:maxLines="2"
                             android:text="@{foodRecipe.title}"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
