--- a/app/src/main/res/layout/fragment_food_recipes.xml
+++ b/app/src/main/res/layout/fragment_food_recipes.xml
@@ -3,18 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_height="match_parent"
     tools:context=".ui.recipes.FoodRecipesFragment">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
+        style="@style/Widget.FoodyRecipe.SearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_8dp"
-        android:background="@drawable/bg_search_view"
-        app:iconifiedByDefault="false"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:queryHint="Search Food Recipe" />
+        tools:layout_editor_absoluteX="8dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
