--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -132,7 +132,7 @@
 
     <TextView
         android:id="@+id/tvDescriptionHead"
-        style="@style/TextAppearance.Material3.TitleLarge"
+        style="@style/Widget.FoodyRecipe.TitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_16dp"
@@ -143,7 +143,7 @@
 
     <TextView
         android:id="@+id/tvDescripiton"
-        style="@style/TextAppearance.Material3.BodyMedium"
+        style="@style/Widget.FoodyRecipe.DescriptionStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_16dp"
