--- a/app/src/main/res/menu/favorites_conextual_menu.xml
+++ b/app/src/main/res/menu/favorites_conextual_menu.xml
@@ -7,6 +7,6 @@
         android:title="Delete"
         android:icon="@drawable/ic_delete_24"
         app:showAsAction="ifRoom"
-        android:iconTint="@color/white"
+        android:iconTint="@color/onSurface"
         tools:targetApi="o" />
 </menu>
